--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.26",
@@ -30,6 +32,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jsdom": "^22.1.0",
+    "msw": "^1.2.5",
     "postcss": "^8.4.29",
     "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
